[package]
name = "kalamdb-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-jobs = { path = "../kalamdb-jobs" }
kalamdb-raft = { path = "../kalamdb-raft" }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-auth = { path = "../kalamdb-auth" }
kalamdb-system = { path = "../kalamdb-system" }
kalamdb-filestore = { path = "../kalamdb-filestore" }
kalamdb-session = { path = "../kalamdb-session" }

# Apache Arrow
arrow = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-ws = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }


# Bytes
bytes = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }

# Tracing / observability
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Base64 encoding/decoding
base64 = { workspace = true }

# Compression
flate2 = { workspace = true }

# Embedded UI assets (behind "embedded-ui" feature)
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true }

# Concurrency
moka = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["embedded-ui"]
embedded-ui = ["rust-embed"]

[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = { workspace = true }
kalamdb-store = { path = "../kalamdb-store" }
actix-rt = { workspace = true }
