[package]
name = "kalamdb-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["websocket"]
# Enable WebSocket authentication support (From<WsAuthCredentials> impl)
websocket = ["kalamdb-commons/websocket-auth"]

[dependencies]
# Password hashing
bcrypt = { workspace = true }

# Encoding/decoding
base64 = { workspace = true }

# JWT validation
jsonwebtoken = { workspace = true }

# Web framework
actix-web = { workspace = true }

# Cookie handling
cookie = { workspace = true }

# Internal dependencies
kalamdb-commons = { path = "../kalamdb-commons", default-features = false, features = ["serde"] }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-oidc = { path = "../kalamdb-oidc" }
kalamdb-session = { path = "../kalamdb-session" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-system = { path = "../kalamdb-system" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }

# Caching
moka = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }

# HMAC for password cache fingerprinting (avoids storing plaintext passwords)
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
