[package]
name = "kalamdb-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["websocket", "http"]
# Enable WebSocket authentication support (From<WsAuthCredentials> impl)
websocket = ["kalamdb-commons/websocket-auth"]
# Enable HTTP framework (actix-web) integration: extractors, cookies, IP helpers
http = ["dep:actix-web", "dep:cookie"]

[dependencies]
# Password hashing
bcrypt = { workspace = true }

# Encoding/decoding
base64 = { workspace = true }

# JWT validation
jsonwebtoken = { workspace = true }

# Web framework (optional — gated behind "http" feature)
actix-web = { workspace = true, optional = true }

# Cookie handling (optional — gated behind "http" feature)
cookie = { workspace = true, optional = true }

# Internal dependencies
kalamdb-commons = { path = "../kalamdb-commons", default-features = false, features = ["serde"] }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-oidc = { path = "../kalamdb-oidc" }
kalamdb-session = { path = "../kalamdb-session" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-sql = { path = "../kalamdb-sql" }
kalamdb-system = { path = "../kalamdb-system" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }
ipnet = { workspace = true }

# Time handling
chrono = { workspace = true }

# Caching
moka = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }

# HMAC for password cache fingerprinting (avoids storing plaintext passwords)
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
