[package]
name = "kalamdb-commons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, constants, and utilities for KalamDB"
keywords = ["kalamdb", "database", "types"]
categories = ["database"]

[dependencies]
# workspace deps
dashmap = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
num_cpus = { workspace = true }
datafusion = { workspace = true, optional = true }
parking_lot = { workspace = true }
storekey = { workspace = true }
kalamdb-macros = { path = "../kalamdb-macros" }
# Optional dependencies - only enabled via features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
flatbuffers = { workspace = true, optional = true }
flexbuffers = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
openraft = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
nanoid = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
# Feature to enable serde support for serialization
serde = [
	"dep:serde",
	"dep:serde_json",
	]
serialization = [
	"serde",
	"dep:flatbuffers",
	"dep:flexbuffers",
	]
arrow = [
	"serde",
	"dep:arrow",
	"dep:arrow-schema",
	]
websocket-auth = ["serde"]
# Full feature set including Arrow/DataFusion-backed utilities (for server use)
full = [
	"serde",
	"serialization",
	"arrow",
	"dep:chrono",
	"dep:openraft",
	"dep:uuid",
	"dep:nanoid",
	"dep:log",
 	"websocket-auth",
	"dep:datafusion",
]
# WASM-compatible subset (no datafusion but has serialization)
wasm = ["serde"]
default = ["full"]

[lib]
name = "kalamdb_commons"
path = "src/lib.rs"
