[package]
name = "kalamdb-commons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, constants, and utilities for KalamDB"
keywords = ["kalamdb", "database", "types"]
categories = ["database"]

[dependencies]
# workspace deps
dashmap = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
num_cpus = { workspace = true }
datafusion-common = { workspace = true, optional = true }
parking_lot = { workspace = true }
storekey = { workspace = true }
kalamdb-macros = { path = "../kalamdb-macros" }
# Optional dependencies - only enabled via features
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
flatbuffers = { workspace = true, optional = true }
flexbuffers = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arrow = { workspace = true, optional = true }
openraft = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
nanoid = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
# Feature to enable serde support for serialization
serde = [
	"dep:serde",
	"dep:serde_json",
	]
arrow = [
	"serde",
	"dep:arrow",
	"dep:arrow-schema",
	]
scalar-values = [
	"arrow",
	"dep:datafusion-common",
	]
rows = ["scalar-values"]
schema-metadata = ["arrow"]
arrow-conversion = ["arrow"]
table-definition = [
	"schema-metadata",
	"arrow-conversion",
	"dep:chrono",
	]
conversions = [
	"rows",
	"schema-metadata",
	"dep:uuid",
	]
serialization = [
	"rows",
	"dep:flatbuffers",
	"dep:flexbuffers",
	]
arrow-utils = [
	"arrow",
	"rows",
	]
websocket-auth = ["serde"]
# Full feature set including Arrow/DataFusion-backed utilities (for server use)
full = [
	"serde",
	"rows",
	"conversions",
	"serialization",
	"arrow-utils",
	"table-definition",
	"dep:chrono",
	"dep:openraft",
	"dep:uuid",
	"dep:nanoid",
	"dep:log",
 	"websocket-auth",
	"dep:datafusion-common",
]
# WASM-compatible subset (no datafusion but has serialization)
wasm = ["serde"]
default = ["full"]

[lib]
name = "kalamdb_commons"
path = "src/lib.rs"
