[package]
name = "kalamdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", features = ["full"] }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-filestore = { path = "../kalamdb-filestore" }
kalamdb-live = { path = "../kalamdb-live" }
kalamdb-observability = { path = "../kalamdb-observability" }
kalamdb-plan-cache = { workspace = true }
kalamdb-pg = { path = "../kalamdb-pg" }
kalamdb-raft = { path = "../kalamdb-raft" }
kalamdb-session = { path = "../kalamdb-session" }
kalamdb-session-datafusion = { path = "../kalamdb-session-datafusion" }
kalamdb-sharding = { path = "../kalamdb-sharding" }
kalamdb-sql = { package = "kalamdb-dialect", path = "../kalamdb-dialect" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-auth = { path = "../kalamdb-auth", default-features = false, features = ["websocket"] }
kalamdb-system = { path = "../kalamdb-system" }
kalamdb-tables = { path = "../kalamdb-tables" }
kalamdb-publisher = { path = "../kalamdb-publisher" }
kalamdb-transactions = { path = "../kalamdb-transactions" }
kalamdb-views = { path = "../kalamdb-views" }
kalamdb-vector = { path = "../kalamdb-vector" }

# Apache Arrow ecosystem
arrow = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }

# SQL parsing (for native DML handlers)
sqlparser = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# System
hostname = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
log = { workspace = true }

# gRPC (for PgQueryExecutor trait)
tonic = { workspace = true }

# Tracing / observability
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

# ULID generation
ulid = { workspace = true }

# Single-assignment statics
once_cell = { workspace = true }

# Regular expressions
regex = { workspace = true }

# ZIP archive creation
zip = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
parquet = { workspace = true }
ntest = { workspace = true }
kalamdb-handlers = { path = "../kalamdb-handlers" }
kalamdb-jobs = { path = "../kalamdb-jobs" }

[features]
# Feature to run expensive/slow tests (disabled by default)
expensive_tests = []
# Expose test helpers to other crates' test code (dev-dependencies)
test-helpers = ["kalamdb-live/test-helpers"]
mimalloc = ["kalamdb-observability/mimalloc", "kalamdb-raft/mimalloc"]

[lib]
doctest = false
