[package]
name = "kalamdb-dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KalamDB SQL dialect, parser, and statement classification"

[dependencies]
kalamdb-commons = { path = "../kalamdb-commons", features = ["serde"] }
kalamdb-session = { path = "../kalamdb-session" }
kalamdb-system = { path = "../kalamdb-system" }

arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true, features = ["visitor"] }
regex = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
