[package]
name = "kalamdb-filestore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem and Parquet file operations for KalamDB"
keywords = ["kalamdb", "database", "parquet", "storage"]
categories = ["database"]

[dependencies]
# Workspace dependencies
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-system = { path = "../kalamdb-system" }
kalamdb-configs = { path = "../kalamdb-configs" }

# Apache Arrow ecosystem
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Futures helpers (for object_store listing streams)
futures-util = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# System information (disk capacity for health checks)
sysinfo = { workspace = true }

# Random number generation (for health check test files)
rand = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Object store (S3/GCS/Azure/local abstraction)
object_store = { workspace = true }

# Parquet file format
parquet = { workspace = true }

# Bytes type for in-memory buffers
bytes = { workspace = true }

# SHA-256 hashing for file integrity
sha2 = { workspace = true }

# Hex encoding for hash output
hex = { workspace = true }

# Concurrent hash map for storage registry cache
dashmap = { workspace = true }

# Locks for lazy initialization
parking_lot = { workspace = true }

# Store abstraction (for tests)
kalamdb-store = { path = "../kalamdb-store" }

[features]
default = ["cloud-aws"]
cloud-aws = ["object_store/aws"]
cloud-gcp = ["object_store/gcp"]
cloud-azure = ["object_store/azure"]

[dev-dependencies]
once_cell = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "kalamdb_filestore"
path = "src/lib.rs"
