[package]
name = "kalamdb-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL statement handler implementations for KalamDB"

[dependencies]
# Internal crates
kalamdb-commons = { path = "../kalamdb-commons", default-features = false }
kalamdb-handlers-admin = { path = "crates/admin" }
kalamdb-handlers-ddl = { path = "crates/ddl" }
kalamdb-handlers-support = { path = "crates/support" }
kalamdb-handlers-stream = { path = "crates/stream" }
kalamdb-handlers-user = { path = "crates/user" }
kalamdb-core = { path = "../kalamdb-core" }
kalamdb-sql = { path = "../kalamdb-sql" }
uuid = { workspace = true }

[lib]
doctest = false

[dev-dependencies]
kalamdb-core = { path = "../kalamdb-core", features = ["test-helpers"] }
