[package]
name = "kalamdb-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
# System monitoring
sysinfo = { workspace = true }
num_cpus = { workspace = true }
libmimalloc-sys = { workspace = true, optional = true }

# Logging
log = { workspace = true }

[features]
mimalloc = ["dep:libmimalloc-sys"]

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[lib]
doctest = false

[build-dependencies]
chrono = { workspace = true }
cc = { workspace = true }
