[package]
name = "kalamdb-oidc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
kalamdb-commons = { path = "../kalamdb-commons", default-features = false, features = ["serde"] }
base64 = { workspace = true }
chrono = { workspace = true }
