[package]
name = "kalamdb-pg"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["server", "tls"]
server = [
	"dep:arrow",
	"dep:arrow-ipc",
	"dep:async-trait",
	"dep:dashmap",
	"dep:kalamdb-auth",
	"dep:kalamdb-commons",
	"dep:kalamdb-server-auth",
	"dep:log",
	"dep:serde_json",
	"dep:uuid",
]
tls = ["tonic/tls-webpki-roots", "tonic/tls-ring"]

[dependencies]
kalamdb-auth = { path = "../kalamdb-auth", default-features = false, optional = true }
kalamdb-commons = { path = "../kalamdb-commons", default-features = false, features = ["rows"], optional = true }
arrow = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bytes = { workspace = true }
dashmap = { workspace = true, optional = true }
log = { workspace = true, optional = true }
prost = { workspace = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
kalamdb-server-auth = { path = "../kalamdb-server-auth", optional = true }

[dev-dependencies]
arrow-ipc = { workspace = true }
datafusion-common = { workspace = true }
kalamdb-auth = { path = "../kalamdb-auth" }
kalamdb-commons = { path = "../kalamdb-commons", features = ["full"] }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-core = { path = "../kalamdb-core", features = ["test-helpers"] }
kalamdb-sharding = { path = "../kalamdb-sharding" }
kalamdb-system = { path = "../kalamdb-system" }
ntest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tonic = { workspace = true }
