[package]
name = "kalamdb-plan-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kalamdb-commons = { workspace = true, features = ["full"] }
datafusion = { workspace = true }
moka = { workspace = true }

[lib]
doctest = false