[package]
name = "kalamdb-raft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Raft consensus layer for KalamDB multi-node clustering"

[dependencies]
# Workspace dependencies
kalamdb-commons = { path = "../kalamdb-commons" }
kalamdb-configs = { path = "../kalamdb-configs" }
kalamdb-pg = { path = "../kalamdb-pg" }
kalamdb-observability = { path = "../kalamdb-observability" }
kalamdb-system = { path = "../kalamdb-system" }
kalamdb-store = { path = "../kalamdb-store" }
kalamdb-sharding = { path = "../kalamdb-sharding" }

# Raft consensus
openraft = { workspace = true }

# gRPC network layer
tonic = { workspace = true, features = ["tls-webpki-roots", "tls-ring"] }
tonic-prost = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
flexbuffers = { workspace = true }
rmp-serde = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
dashmap = { workspace = true }
parking_lot = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
kalam-pg-client = { path = "../../../pg/crates/kalam-pg-client" }
kalam-pg-common = { path = "../../../pg/crates/kalam-pg-common" }
kalamdb-pg = { path = "../kalamdb-pg" }
ntest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = { workspace = true }
